--- a/data/homepage/cpp/cpp_016.md
+++ b/data/homepage/cpp/cpp_016.md
@@ -514,4 +514,4 @@ int complexFunction(int x) {
 - 理解编译器行为
 - 掌握系统调用
 
-通过系统学习和实践，你将能够编写高性能、高质量的C++程序，并具备解决复杂性能和调试问题的能力。记住，性能优化是一个持续的过程，需要在实践中不断积累经验和提升技能。
+通过系统学习和实践，你将能够编写高性能、高质量的C++程序，并具备解决复杂性能和调试问题的能力。
