--- a/data/homepage/cpp/cpp_002.md
+++ b/data/homepage/cpp/cpp_002.md
@@ -1,28 +1,33 @@
 # C++开发环境搭建与基础语法
 
-### 1. 编译器的本质与作用
+## 1. 编译器的本质与作用
 
-**什么是编译器**
+### 1.1 什么是编译器
+
 编译器是将人类可读的源代码转换为计算机可执行程序的工具。它就像一个翻译官，将我们用C++写的指令翻译成计算机能理解的机器语言。
 
-**编译器的工作流程**
+### 1.2 编译器的工作流程
+
 编译过程可以理解为四个主要阶段：
+
 - **预处理**：处理以#开头的指令，如包含头文件
 - **编译**：将源代码转换为汇编代码
 - **汇编**：将汇编代码转换为机器码
 - **链接**：将多个文件组合成最终的可执行程序
 
-**主流编译器的特点**
+### 1.3 主流编译器的特点
+
 - **GCC**：开源、跨平台、功能强大，广泛用于Linux系统
 - **Clang**：现代化设计、错误信息清晰、编译速度快
 - **MSVC**：微软开发、与Windows系统深度集成
 - **Intel编译器**：针对Intel处理器优化，适合高性能计算
 
-### 2. 开发环境的构成要素
+## 2. 开发环境的构成要素
 
-**集成开发环境（IDE）vs 文本编辑器**
+### 2.1 集成开发环境（IDE）vs 文本编辑器
 
 集成开发环境就像一个功能齐全的工作台，包含了编程所需的所有工具：
+
 - 代码编辑器（用于写代码）
 - 编译器（用于编译代码）
 - 调试器（用于查找错误）
@@ -30,64 +35,78 @@
 
 文本编辑器则更像一个专业的写作工具，轻量但需要配合其他工具使用。
 
-**开发环境的选择原则**
+### 2.2 开发环境的选择原则
+
 - 初学者建议使用IDE，如Visual Studio或Code::Blocks
 - 有经验的开发者可以选择配置灵活的编辑器，如VS Code
 - 选择时要考虑项目需求、团队习惯和个人偏好
 
-### 3. 构建系统的概念
+## 3. 构建系统的概念
 
-**什么是构建系统**
+### 3.1 什么是构建系统
+
 构建系统就像一个自动化的生产线，它知道如何将源代码文件组装成最终的程序。当项目包含多个文件时，构建系统能够：
+
 - 确定编译顺序
 - 管理文件依赖关系
 - 只重新编译修改过的文件（提高效率）
 
-**常见构建工具**
+### 3.2 常见构建工具
+
 - **Make**：传统的构建工具，使用Makefile描述构建规则
 - **CMake**：现代跨平台构建工具，能生成不同平台的构建文件
 - **Visual Studio项目文件**：Windows平台的可视化项目管理
 
-## C++语言基础概念
+## 4. C++语言基础概念
 
-### 1. 语言设计哲学
+### 4.1 语言设计哲学
 
 **零开销抽象原则**
+
 C++的核心理念是"你不使用的功能不会影响程序性能"。这意味着C++提供高级功能的同时，不会牺牲程序的执行效率。
 
 **多范式编程支持**
+
 C++支持多种编程风格：
+
 - **过程式编程**：像C语言一样，使用函数组织代码
 - **面向对象编程**：使用类和对象来建模现实世界
 - **泛型编程**：编写可重用的通用代码
 - **函数式编程**：使用函数作为基本构建块
 
-### 2. 基本语法规则
+### 4.2 基本语法规则
 
 **标识符命名规则**
+
 标识符是我们给变量、函数、类等起的名字，需要遵循一定规则：
+
 - 只能包含字母、数字和下划线
 - 必须以字母或下划线开头
 - 不能使用C++关键字
 - 区分大小写
 
 **语句和表达式**
+
 - **语句**：完成特定操作的代码单元，如声明变量、调用函数
 - **表达式**：能够计算出值的代码片段，如数学运算、函数调用
 - **复合语句**：用花括号{}包围的语句组，定义了作用域
 
 **作用域概念**
+
 作用域决定了变量和函数的可见性范围：
+
 - **全局作用域**：在所有函数外部声明，整个程序可见
 - **函数作用域**：在函数内部声明，只在该函数内可见
 - **块作用域**：在{}内部声明，只在该块内可见
 
-### 3. 数据类型系统
+### 4.3 数据类型系统
 
 **基本数据类型的分类**
 
 **整数类型**
+
 用于存储整数值，包括：
+
 - `int`：标准整数类型，通常32位
 - `short`：短整数，通常16位
 - `long`：长整数，至少32位
@@ -96,32 +115,41 @@ C++支持多种编程风格：
 每种类型都有有符号和无符号版本，影响能表示的数值范围。
 
 **浮点类型**
+
 用于存储小数：
+
 - `float`：单精度浮点数，通常32位
 - `double`：双精度浮点数，通常64位
 - `long double`：扩展精度浮点数
 
 **字符类型**
+
 用于存储字符：
+
 - `char`：基本字符类型，存储ASCII字符
 - `wchar_t`：宽字符类型，支持Unicode
 - `char16_t`和`char32_t`：C++11新增的Unicode字符类型
 
 **布尔类型**
+
 `bool`类型只能存储`true`或`false`两个值，用于逻辑判断。
 
 **类型修饰符的作用**
 
 **const修饰符**
+
 表示"常量"，被const修饰的变量不能被修改：
+
 - 提高代码安全性
 - 帮助编译器优化
 - 表达设计意图
 
 **volatile修饰符**
+
 告诉编译器变量可能被程序外部因素改变，不要过度优化。
 
 **static修饰符**
+
 在不同上下文中有不同含义：
 
 ```cpp
@@ -145,6 +173,7 @@ int MyClass::shared_count = 0;  // 定义
 ```
 
 **类型大小和范围**
+
 不同类型占用的内存大小和能表示的数值范围：
 
 ```cpp
@@ -164,11 +193,12 @@ int main() {
 }
 ```
 
-## 输入输出系统概念
+## 5. 输入输出系统概念
 
-### 流的概念
+### 5.1 流的概念
 
 **什么是流**
+
 流是C++中处理输入输出的抽象概念，就像水流一样，数据在其中流动：
 
 ```cpp
@@ -199,6 +229,7 @@ int main() {
 ```
 
 **流操作符的重载**
+
 C++允许为自定义类型重载流操作符：
 
 ```cpp
@@ -237,86 +268,101 @@ int main() {
 ```
 
 **标准流对象**
+
 - `cin`：标准输入流，通常连接键盘
 - `cout`：标准输出流，通常连接屏幕
 - `cerr`：标准错误流，用于输出错误信息
 - `clog`：标准日志流，用于输出日志信息
 
 **流的优势**
+
 - **类型安全**：编译器能检查数据类型匹配
 - **可扩展**：可以为自定义类型定义输入输出操作
 - **统一接口**：文件、字符串、网络等都使用相同的接口
 
-### 格式化输入输出
+### 5.2 格式化输入输出
 
 **输出格式控制**
+
 C++提供了丰富的格式控制选项：
+
 - 数值的进制表示（十进制、八进制、十六进制）
 - 浮点数的精度控制
 - 字段宽度和对齐方式
 - 填充字符的选择
 
 **输入处理机制**
+
 输入流会自动：
+
 - 跳过空白字符（空格、制表符、换行符）
 - 根据变量类型解析输入
 - 在类型不匹配时设置错误状态
 
-## 开发工具链集成
+## 6. 开发工具链集成
 
-### 调试工具的作用
+### 6.1 调试工具的作用
 
 **调试器的功能**
+
 调试器是帮助我们查找和修复程序错误的工具：
+
 - **断点**：在指定位置暂停程序执行
 - **单步执行**：逐行执行代码，观察程序行为
 - **变量监视**：查看变量的当前值
 - **调用栈**：查看函数调用的层次关系
 
 **调试的基本策略**
+
 - 理解问题：明确程序应该做什么，实际做了什么
 - 定位问题：使用断点和输出语句缩小问题范围
 - 分析问题：检查变量值、程序流程是否符合预期
 - 验证修复：确保修改解决了问题且没有引入新问题
 
-### 版本控制的重要性
+### 6.2 版本控制的重要性
 
 **为什么需要版本控制**
+
 - 跟踪代码变化历史
 - 支持多人协作开发
 - 提供代码备份和恢复能力
 - 支持并行开发不同功能
 
 **Git的基本概念**
+
 - **仓库**：存储项目历史的数据库
 - **提交**：保存代码快照的操作
 - **分支**：并行开发的独立线路
 - **合并**：将不同分支的修改整合
 
-## 学习建议与最佳实践
+## 7. 学习建议与最佳实践
 
-### 环境搭建的建议
+### 7.1 环境搭建的建议
 
 **选择合适的工具**
+
 - 初学者：推荐使用集成度高的IDE
 - 进阶学习：可以尝试配置更灵活的编辑器
 - 团队开发：选择团队统一的开发环境
 
 **循序渐进的学习方法**
+
 1. 先掌握基本的编译和运行流程
 2. 逐步了解调试工具的使用
 3. 学习项目组织和构建系统
 4. 掌握版本控制的基本操作
 
-### 常见问题的预防
+### 7.2 常见问题的预防
 
 **编译错误的避免**
+
 - 仔细检查语法规则
 - 注意大小写敏感
 - 确保头文件正确包含
 - 理解编译器错误信息
 
 **运行时错误的预防**
+
 - 始终初始化变量
 - 检查数组边界
 - 合理管理内存
@@ -618,7 +664,7 @@ void showVersionInfo() {
 }
 ```
 
-## 下一步学习方向
+## 8. 下一步学习方向
 
 掌握了开发环境和基础语法后，建议继续学习：
 
@@ -627,10 +673,6 @@ void showVersionInfo() {
 3. **函数系统**：理解函数的定义、调用和参数传递
 4. **数组与指针**：掌握C++的内存管理基础
 
-## 总结
+## 9. 总结
 
 C++开发环境的搭建是学习C++编程的第一步，也是最重要的基础。理解编译器的工作原理、掌握基本的语法规则、熟悉开发工具的使用，这些都是成为优秀C++程序员的必备技能。
-
-记住，工具是为了更好地表达我们的想法和解决问题。不要被复杂的配置和众多的选项所困扰，从简单开始，逐步深入。最重要的是多动手实践，在实践中加深对概念的理解。
-
-C++是一门强大而复杂的语言，但只要我们打好基础，循序渐进，就一定能够掌握它的精髓。
