--- a/data/homepage/cpp/cpp_003.md
+++ b/data/homepage/cpp/cpp_003.md
@@ -1,6 +1,6 @@
 # C++运算符与控制结构
 
-## 内容概览
+## 1. 内容概览
 
 本章将从概念层面深入探讨：
 
@@ -12,9 +12,9 @@
 
 ---
 
-## 运算符系统的设计哲学
+## 2. 运算符系统的设计哲学
 
-### 运算符的本质作用
+### 2.1 运算符的本质作用
 
 运算符是编程语言中用于操作数据的符号，它们代表了计算机能够执行的基本操作。在C++中，运算符不仅仅是简单的符号，而是一套完整的操作体系，体现了语言设计者对计算抽象的深度思考。
 
@@ -187,7 +187,7 @@ int main() {
 }
 ```
 
-## 表达式求值的基本机制
+## 3. 表达式求值的基本机制
 
 ### 表达式的构成要素
 
@@ -199,7 +199,7 @@ int main() {
 - **函数调用**：返回值的计算过程
 - **运算符**：连接和操作这些元素的符号
 
-### 求值顺序的重要性
+### 2.2 求值顺序的重要性
 
 表达式求值顺序不仅影响计算结果，还关系到程序的正确性和性能。C++在这方面有着精确的规定，但也留有一些实现定义的空间。
 
@@ -209,7 +209,7 @@ int main() {
 - **副作用**：某些操作会改变程序状态
 - **短路求值**：逻辑运算符的特殊求值策略
 
-### 类型转换与表达式
+### 2.3 类型转换与表达式
 
 在表达式求值过程中，经常需要进行类型转换。C++提供了丰富的类型转换机制，既有自动的隐式转换，也有显式的强制转换。
 
@@ -292,9 +292,9 @@ int main() {
 }
 ```
 
-## 条件控制的核心原理
+## 3. 条件控制的核心原理
 
-### 程序分支的本质
+### 3.1 程序分支的本质
 
 条件控制是程序能够做出"决策"的基础，它让程序能够根据不同的情况执行不同的代码路径。这种能力是计算机程序智能性的重要体现。
 
@@ -304,7 +304,7 @@ int main() {
 - **状态改变**：不同路径可能导致不同的程序状态
 - **逻辑完整性**：确保所有可能情况都有对应处理
 
-### if语句的设计哲学
+### 3.2 if语句的设计哲学
 
 if语句是最基本的条件控制结构，它的设计体现了简单而强大的编程哲学。通过if语句，程序员可以表达复杂的逻辑判断。
 
@@ -404,7 +404,7 @@ int main() {
 }
 ```
 
-### switch语句的适用场景
+### 3.3 switch语句的适用场景
 
 switch语句是处理多分支选择的专门工具，它在特定场景下比多个if-else更加清晰和高效。
 
@@ -567,9 +567,9 @@ int main() {
 
 ---
 
-## 循环结构的设计思想
+## 4. 循环结构的设计思想
 
-### 重复执行的抽象
+### 4.1 重复执行的抽象
 
 循环是程序中实现重复执行的基本机制，它让程序能够高效地处理大量相似的任务。循环的本质是将重复的逻辑抽象为可控制的执行模式。
 
@@ -579,7 +579,7 @@ int main() {
 - **循环体**：每次迭代要执行的代码
 - **状态更新**：改变循环变量以推进循环进程
 
-### for循环的设计精髓
+### 4.2 for循环的设计精髓
 
 for循环是最常用的循环结构，它的三段式设计（初始化、条件、更新）清晰地表达了循环的完整逻辑。
 
@@ -682,7 +682,7 @@ int main() {
 }
 ```
 
-### while循环的灵活性
+### 4.3 while循环的灵活性
 
 while循环提供了更加灵活的循环控制方式，特别适合那些循环次数不确定的场景。
 
@@ -840,7 +840,7 @@ int main() {
 }
 ```
 
-### 现代C++的范围循环
+### 4.4 现代C++的范围循环
 
 C++11引入的范围for循环（range-based for loop）代表了循环设计的现代化思路，它强调简洁性和安全性。
 
@@ -1003,9 +1003,9 @@ int main() {
 
 ---
 
-## 控制流的高级概念
+## 5. 控制流的高级概念
 
-### 程序流程的抽象层次
+### 5.1 程序流程的抽象层次
 
 程序的控制流可以在不同的抽象层次上理解，从最底层的机器指令到高层的算法逻辑，每个层次都有其特定的关注点。
 
@@ -1015,7 +1015,7 @@ int main() {
 - **算法层次**：问题解决的逻辑步骤
 - **架构层次**：系统组件间的交互流程
 
-### 结构化编程的原则
+### 5.2 结构化编程的原则
 
 结构化编程是软件工程的重要思想，它强调使用清晰的控制结构来组织程序逻辑。
 
@@ -1025,7 +1025,7 @@ int main() {
 - **模块化分解**：将复杂问题分解为简单子问题
 - **逻辑清晰性**：程序的执行路径应该清晰可追踪
 
-### 异常处理与控制流
+### 5.3 异常处理与控制流
 
 异常处理是现代编程语言的重要特性，它提供了一种处理错误和异常情况的结构化方法。
 
@@ -1037,9 +1037,9 @@ int main() {
 
 ---
 
-## 现代C++的控制流增强
+## 6. 现代C++的控制流增强
 
-### C++11及后续标准的改进
+### 6.1 C++11及后续标准的改进
 
 现代C++在控制流方面引入了许多改进，这些改进不仅提高了代码的表达能力，还增强了类型安全和性能。
 
@@ -1049,7 +1049,7 @@ int main() {
 - **lambda表达式**：内联函数对象的简洁表达
 - **constexpr if**：编译时条件判断
 
-### 函数式编程元素
+### 6.2 函数式编程元素
 
 现代C++引入了一些函数式编程的概念，这些概念为控制流提供了新的思路。
 
@@ -1059,7 +1059,7 @@ int main() {
 - **函数组合**：通过函数组合构建复杂逻辑
 - **声明式编程**：关注"做什么"而非"怎么做"
 
-### 并发编程的控制流
+### 6.3 并发编程的控制流
 
 随着多核处理器的普及，并发编程成为现代C++的重要组成部分，这为控制流带来了新的挑战和机遇。
 
@@ -1071,9 +1071,9 @@ int main() {
 
 ---
 
-## 性能与优化考虑
+## 7. 性能与优化考虑
 
-### 编译器优化的影响
+### 7.1 编译器优化的影响
 
 现代编译器在控制流优化方面非常先进，理解这些优化有助于编写更高效的代码。
 
@@ -1083,7 +1083,7 @@ int main() {
 - **内联展开**：减少函数调用开销
 - **死代码消除**：移除永远不会执行的代码
 
-### 性能友好的编程实践
+### 7.2 性能友好的编程实践
 
 编写性能友好的控制流代码需要理解硬件特性和编译器行为。
 
@@ -1095,9 +1095,9 @@ int main() {
 
 ---
 
-## 代码质量与最佳实践
+## 8. 代码质量与最佳实践
 
-### 可读性与维护性
+### 8.1 可读性与维护性
 
 良好的控制流设计不仅要考虑功能实现，还要考虑代码的可读性和维护性。
 
@@ -1107,7 +1107,7 @@ int main() {
 - **适当的注释**：解释复杂的逻辑判断
 - **一致的风格**：保持代码风格的一致性
 
-### 错误处理策略
+### 8.2 错误处理策略
 
 良好的错误处理是程序健壮性的重要保证，需要在设计阶段就考虑各种异常情况。
 
@@ -1119,9 +1119,9 @@ int main() {
 
 ---
 
-## 学习建议与发展方向
+## 9. 学习建议与发展方向
 
-### 循序渐进的学习方法
+### 9.1 循序渐进的学习方法
 
 掌握C++的运算符和控制结构需要理论学习和实践练习相结合。
 
@@ -1131,7 +1131,7 @@ int main() {
 - **阅读代码**：学习优秀代码中的控制流设计
 - **性能分析**：了解不同写法的性能差异
 
-### 进阶学习方向
+### 9.2 进阶学习方向
 
 在掌握基础控制结构后，可以向更高级的主题发展：
 
@@ -1143,8 +1143,8 @@ int main() {
 
 ---
 
-## 总结
+## 10. 总结
 
 C++的运算符和控制结构是程序设计的基础工具，它们提供了表达计算逻辑和控制程序流程的基本能力。理解这些概念不仅有助于编写正确的程序，还能帮助我们设计出清晰、高效、可维护的代码。
 
-现代C++在保持向后兼容的同时，不断引入新的特性来改进控制流的表达能力。作为学习者，我们既要掌握传统的控制结构，也要了解现代C++的新特性，这样才能在实际开发中做出最佳选择。
+现代C++在保持向后兼容的同时，不断引入新的特性来改进控制流的表达能力。
