--- a/data/homepage/cpp/cpp_004.md
+++ b/data/homepage/cpp/cpp_004.md
@@ -1,6 +1,6 @@
 # C++函数、数组与字符串基础概念
 
-## 核心概念导航
+## 1. 核心概念导航
 
 - **函数概念**：代码组织和重用的基本单位
 - **参数传递**：数据在函数间传递的方式
@@ -8,9 +8,9 @@
 - **字符串本质**：字符序列的表示和操作
 - **递归思想**：函数调用自身解决问题的方法
 
-## 函数的基本概念
+## 2. 函数的基本概念
 
-### 函数的基本概念
+### 2.1 函数的定义与声明
 
 **函数的定义与声明**
 
@@ -89,7 +89,7 @@ int main() {
 }
 ```
 
-### 2. 参数传递的基本方式
+### 2.2 参数传递的基本方式
 
 **值传递、引用传递和指针传递**
 
@@ -142,9 +142,9 @@ int main() {
 }
 ```
 
-### 3. 数组的基本原理
+## 3. 数组的基本原理
 
-**一维数组操作**
+### 3.1 一维数组操作
 
 ```cpp
 #include <iostream>
@@ -203,7 +203,7 @@ int main() {
 }
 ```
 
-**二维数组操作**
+### 3.2 二维数组操作
 
 ```cpp
 #include <iostream>
@@ -245,9 +245,9 @@ int main() {
 }
 ```
 
-### 4. 字符串的基本概念
+## 4. 字符串的基本概念
 
-**C风格字符串和std::string**
+### 4.1 C风格字符串和std::string
 
 ```cpp
 #include <iostream>
@@ -293,7 +293,7 @@ int main() {
 }
 ```
 
-**字符串处理函数**
+### 4.2 字符串处理函数
 
 ```cpp
 #include <iostream>
@@ -357,9 +357,9 @@ int main() {
 }
 ```
 
-### 5. 递归的基本思想
+## 5. 递归的基本思想
 
-**递归函数示例**
+### 5.1 递归函数示例
 
 ```cpp
 #include <iostream>
@@ -443,24 +443,24 @@ int main() {
 }
 ```
 
-## 函数调用的工作原理
+## 6. 函数调用的工作原理
 
-**调用过程的基本步骤**
+### 6.1 调用过程的基本步骤
 1. **准备参数**：将实际参数的值传递给形式参数
 2. **跳转执行**：程序控制权转移到函数内部
 3. **执行函数体**：按顺序执行函数内的语句
 4. **返回结果**：将计算结果返回给调用者
 5. **恢复执行**：程序控制权返回到调用点继续执行
 
-**函数调用的内存管理**
+### 6.2 函数调用的内存管理
 - **栈空间**：每次函数调用都会在栈上创建新的存储空间
 - **局部变量**：函数内定义的变量存储在栈空间中
 - **生命周期**：函数结束时，其局部变量自动销毁
 - **作用域**：函数内的变量只在函数内部可见
 
-## 参数传递的基本方式
+## 7. 参数传递的基本方式
 
-### 值传递（按值传递）
+### 7.1 值传递（按值传递）
 
 **基本概念**
 值传递是最基本的参数传递方式，函数接收的是实际参数值的副本。
@@ -470,7 +470,7 @@ int main() {
 - **内存开销**：需要复制数据，对于大型对象可能消耗较多内存
 - **适用场景**：传递基本数据类型或不需要修改原始数据的情况
 
-### 引用传递
+### 7.2 引用传递
 
 **基本概念**
 引用传递允许函数直接操作原始数据，而不是数据的副本。
@@ -481,7 +481,7 @@ int main() {
 - **别名机制**：引用实际上是原始变量的另一个名字
 - **适用场景**：需要修改原始数据或传递大型对象时
 
-### 指针传递
+### 7.3 指针传递
 
 **基本概念**
 指针传递是通过传递变量的内存地址来实现数据共享。
@@ -492,9 +492,9 @@ int main() {
 - **空值处理**：指针可以为空，需要检查有效性
 - **动态内存**：常用于动态分配的内存管理
 
-## 数组的基本原理
+## 8. 数组的基本原理
 
-### 数组的本质
+### 8.1 数组的本质
 
 **内存组织方式**
 数组是相同类型元素的连续存储集合。理解数组的关键概念：
@@ -509,7 +509,7 @@ int main() {
 - **等价性**：`array[i]` 等价于 `*(array + i)`
 - **退化现象**：数组作为参数传递时会退化为指针
 
-### 多维数组的概念
+### 8.2 多维数组的概念
 
 **二维数组的理解**
 - **逻辑结构**：可以想象为表格或矩阵
@@ -523,9 +523,9 @@ int main() {
 - **游戏开发**：地图、棋盘等二维结构
 - **科学计算**：多维数据的处理
 
-## 字符串的基本概念
+## 9. 字符串的基本概念
 
-### 字符串的本质
+### 9.1 字符串的本质
 
 **字符串的定义**
 字符串本质上是字符的序列，用于表示文本信息。
@@ -542,7 +542,7 @@ int main() {
 - **丰富功能**：提供大量字符串操作方法
 - **安全性**：避免了许多C风格字符串的问题
 
-### 字符编码的基础
+### 9.2 字符编码的基础
 
 **ASCII编码**
 - **基本概念**：美国信息交换标准代码
@@ -556,9 +556,9 @@ int main() {
 - **变长编码**：不同字符占用不同字节数
 - **国际化支持**：支持多种语言和文字系统
 
-## 递归的基本思想
+## 10. 递归的基本思想
 
-### 递归的概念
+### 10.1 递归的概念
 
 **什么是递归**
 递归是一种解决问题的方法，其中函数调用自身来解决规模更小的相同问题。
@@ -569,7 +569,7 @@ int main() {
 - **问题分解**：将大问题分解为小问题
 - **结果合并**：将小问题的解合并为大问题的解
 
-### 递归的工作原理
+### 10.2 递归的工作原理
 
 **执行过程**
 1. **问题分解**：将当前问题分解为更小的子问题
@@ -584,9 +584,9 @@ int main() {
 - **迭代优势**：空间效率高，执行速度快
 - **迭代劣势**：某些问题的迭代实现较为复杂
 
-## 内存管理的基本概念
+## 11. 内存管理的基本概念
 
-### 栈内存与堆内存
+### 11.1 栈内存与堆内存
 
 **栈内存的特点**
 - **自动管理**：变量的创建和销毁由系统自动处理
@@ -600,7 +600,7 @@ int main() {
 - **生命周期**：由程序员控制，不受作用域限制
 - **访问速度**：相对较慢，但空间更大
 
-### 内存安全的重要性
+### 11.2 内存安全的重要性
 
 **常见内存问题**
 - **内存泄漏**：分配的内存没有及时释放
@@ -614,9 +614,9 @@ int main() {
 - **边界检查**：确保数组访问不越界
 - **初始化习惯**：总是初始化变量和指针
 
-## 现代C++的改进
+## 12. 现代C++的改进
 
-### 自动类型推导
+### 12.1 自动类型推导
 
 **auto关键字**
 - **类型推导**：让编译器自动推导变量类型
@@ -624,7 +624,7 @@ int main() {
 - **模板友好**：在模板编程中特别有用
 - **可读性**：在某些情况下提高代码可读性
 
-### Lambda表达式
+### 12.2 Lambda表达式
 
 **匿名函数的概念**
 - **就地定义**：在需要的地方直接定义函数
@@ -632,7 +632,7 @@ int main() {
 - **函数式编程**：支持函数式编程范式
 - **STL集成**：与标准库算法完美配合
 
-### 智能指针
+### 12.3 智能指针
 
 **自动内存管理**
 - **unique_ptr**：独占所有权的智能指针
@@ -640,9 +640,9 @@ int main() {
 - **weak_ptr**：解决循环引用问题
 - **RAII实现**：自动管理资源生命周期
 
-## 学习建议和最佳实践
+## 13. 学习建议和最佳实践
 
-### 循序渐进的学习方法
+### 13.1 循序渐进的学习方法
 
 **基础概念掌握**
 - 先理解概念，再学习语法
@@ -656,7 +656,7 @@ int main() {
 - 阅读优秀代码
 - 参与开源项目
 
-### 编程习惯的培养
+### 13.2 编程习惯的培养
 
 **代码质量**
 - 使用有意义的变量名
@@ -670,9 +670,9 @@ int main() {
 - 逐步定位问题
 - 验证修复效果
 
-## 常见误区和注意事项
+## 14. 常见误区和注意事项
 
-### 函数使用误区
+### 14.1 函数使用误区
 
 **参数传递选择**
 - 不要盲目使用引用传递
@@ -680,7 +680,7 @@ int main() {
 - 理解const的重要性
 - 注意指针的有效性检查
 
-### 数组操作注意事项
+### 14.2 数组操作注意事项
 
 **边界安全**
 - 始终检查数组边界
@@ -688,7 +688,7 @@ int main() {
 - 理解数组退化的影响
 - 注意多维数组的内存布局
 
-### 字符串处理要点
+### 14.3 字符串处理要点
 
 **编码问题**
 - 理解不同编码格式的差异
@@ -696,7 +696,7 @@ int main() {
 - 处理国际化字符
 - 避免缓冲区溢出
 
-## 学习检查点
+## 15. 学习检查点
 
 完成本章学习后，你应该能够：
 
@@ -709,7 +709,7 @@ int main() {
 - [ ] 认识现代C++的主要改进
 - [ ] 培养良好的编程习惯
 
-## 下一步学习方向
+## 16. 下一步学习方向
 
 掌握了函数、数组与字符串的基础概念后，建议继续学习：
 - **面向对象编程**：类和对象的概念
@@ -717,7 +717,7 @@ int main() {
 - **标准库容器**：现代C++的数据结构
 - **模板基础**：泛型编程的入门
 
-## 学习资源推荐
+## 17. 学习资源推荐
 
 **入门教程**
 - C++基础教程和在线课程
