--- a/data/homepage/cpp/cpp_005.md
+++ b/data/homepage/cpp/cpp_005.md
@@ -1,10 +1,8 @@
 # C++指针与动态内存管理
 
-## 指针的核心概念
+## 1. 指针的核心概念
 
-### 1. 指针的核心概念
-
-**指针的基本操作**
+### 1.1 指针的基本操作
 
 ```cpp
 #include <iostream>
@@ -30,7 +28,7 @@ int main() {
 }
 ```
 
-**指针与函数**
+### 1.2 指针与函数
 
 ```cpp
 #include <iostream>
@@ -80,9 +78,9 @@ int main() {
 }
 ```
 
-### 2. 指针与数组的关系
+## 2. 指针与数组的关系
 
-**数组名作为指针**
+### 2.1 数组名作为指针
 
 ```cpp
 #include <iostream>
@@ -122,7 +120,7 @@ int main() {
 }
 ```
 
-**字符串与指针**
+### 2.2 字符串与指针
 
 ```cpp
 #include <iostream>
@@ -161,9 +159,9 @@ int main() {
 }
 ```
 
-### 3. 动态内存管理
+## 3. 动态内存管理
 
-**new和delete操作符**
+### 3.1 new和delete操作符
 
 ```cpp
 #include <iostream>
@@ -200,7 +198,7 @@ int main() {
 }
 ```
 
-**动态二维数组**
+### 3.2 动态二维数组
 
 ```cpp
 #include <iostream>
@@ -256,9 +254,9 @@ int main() {
 }
 ```
 
-### 4. RAII原则与智能指针
+## 4. RAII原则与智能指针
 
-**unique_ptr示例**
+### 4.1 unique_ptr示例
 
 ```cpp
 #include <iostream>
@@ -306,7 +304,7 @@ int main() {
 }
 ```
 
-**shared_ptr示例**
+### 4.2 shared_ptr示例
 
 ```cpp
 #include <iostream>
@@ -359,7 +357,7 @@ int main() {
 }
 ```
 
-**weak_ptr解决循环引用**
+### 4.3 weak_ptr解决循环引用
 
 ```cpp
 #include <iostream>
@@ -425,9 +423,9 @@ int main() {
 }
 ```
 
-### 5. 性能考虑与最佳实践
+## 5. 性能考虑与最佳实践
 
-**内存池示例**
+### 5.1 内存池示例
 
 ```cpp
 #include <iostream>
@@ -519,29 +517,29 @@ int main() {
 }
 ```
 
-### 6. 内存性能的关键因素
+## 6. 内存性能的关键因素
 
-**缓存友好的设计**
+### 6.1 缓存友好的设计
 现代处理器的性能很大程度上依赖于缓存系统：
 - 连续的内存访问模式提高缓存命中率
 - 数据结构的内存布局影响程序性能
 - 理解硬件特性有助于优化程序
 
-**内存分配的开销**
+### 6.2 内存分配的开销
 动态内存分配涉及系统调用，有一定的性能开销：
 - 频繁的小内存分配可能影响性能
 - 内存池等技术可以减少分配开销
 - 合理的内存管理策略很重要
 
-### 安全编程的实践
+## 7. 安全编程的实践
 
-**防御性编程**
+### 7.1 防御性编程
 编写安全的指针代码需要采用防御性编程策略：
 - 检查指针的有效性
 - 明确函数的前置条件和后置条件
 - 使用现代C++的安全特性
 
-**错误处理的重要性**
+### 7.2 错误处理的重要性
 良好的错误处理是安全编程的基础：
 - 及时检测和报告错误
 - 在错误情况下正确清理资源
@@ -549,9 +547,9 @@ int main() {
 
 ---
 
-## 学习建议与发展方向
+## 8. 学习建议与发展方向
 
-### 循序渐进的学习路径
+### 8.1 循序渐进的学习路径
 
 **从简单到复杂**
 学习指针和内存管理需要循序渐进：
@@ -567,7 +565,7 @@ int main() {
 - 分析和调试内存相关问题
 - 学习现代C++的最佳实践
 
-### 现代C++的发展趋势
+### 8.2 现代C++的发展趋势
 
 **更安全的内存管理**
 C++正在向更安全的方向发展：
@@ -581,7 +579,7 @@ C++正在向更安全的方向发展：
 - 算法库减少手动指针操作
 - 函数式编程风格的支持
 
-### 实践建议
+### 8.3 实践建议
 
 **养成良好的编程习惯**
 - 优先使用智能指针而不是原始指针
@@ -597,7 +595,7 @@ C++正在向更安全的方向发展：
 
 ---
 
-## 总结
+## 9. 总结
 
 指针和动态内存管理是C++编程的核心概念，理解这些概念对于编写高效、安全的C++程序至关重要。现代C++通过智能指针、RAII原则等技术大大简化了内存管理的复杂性，但理解底层原理仍然很重要。
 
