--- a/data/homepage/cpp/cpp_007.md
+++ b/data/homepage/cpp/cpp_007.md
@@ -1,8 +1,8 @@
 # C++继承与多态概念指南
 
-## 继承的核心概念
+## 1. 继承的核心概念
 
-### 什么是继承
+### 1.1 什么是继承
 
 继承是面向对象编程的基础特性之一，它允许一个类（派生类）获得另一个类（基类）的属性和行为。继承建立了"is-a"关系，表示派生类是基类的一种特殊形式。
 
@@ -12,7 +12,7 @@
 - 支持多态行为
 - 提高代码的可维护性
 
-### 继承的类型
+### 1.2 继承的类型
 
 **公有继承（public inheritance）**
 - 最常用的继承方式
@@ -30,7 +30,7 @@
 - 表达"implemented-in-terms-of"关系
 - 用于实现继承而非接口继承
 
-### 单继承与多重继承
+### 1.3 单继承与多重继承
 
 **单继承的特点**
 - 每个类只有一个直接基类
@@ -44,9 +44,9 @@
 - 名称查找可能产生歧义
 - 需要虚继承来解决某些问题
 
-## 多态的基本原理
+## 2. 多态的基本原理
 
-### 多态的概念
+### 2.1 多态的概念
 
 多态（Polymorphism）意味着"多种形态"，它允许同一个接口表现出不同的行为。在C++中，多态主要通过虚函数实现，使得程序可以在运行时根据对象的实际类型调用相应的函数。
 
@@ -56,7 +56,7 @@
 - 简化客户端代码
 - 支持统一的接口处理不同类型的对象
 
-### 虚函数的工作机制
+### 2.2 虚函数的工作机制
 
 **虚函数表（Virtual Function Table）**
 - 每个包含虚函数的类都有一个虚函数表
@@ -72,7 +72,7 @@
 
 这个过程确保了即使通过基类指针，也能调用到派生类的正确实现。
 
-### 纯虚函数与抽象类
+### 2.3 纯虚函数与抽象类
 
 **抽象基类示例**
 
@@ -337,9 +337,9 @@ int main() {
 }
 ```
 
-## 继承的核心概念
+## 3. 继承的核心概念
 
-### 基本继承示例
+### 3.1 基本继承示例
 
 **动物继承体系的完整实现**
 
@@ -682,7 +682,7 @@ int main() {
 }
 ```
 
-### 虚函数与多态机制
+### 3.2 虚函数与多态机制
 
 **虚函数表演示**
 
@@ -822,7 +822,7 @@ int main() {
 }
 ```
 
-### 多重继承示例
+### 3.3 多重继承示例
 
 **多重继承的实际应用**
 
