--- a/data/homepage/cpp/cpp_011.md
+++ b/data/homepage/cpp/cpp_011.md
@@ -1,12 +1,18 @@
 # C++高级特性：移动语义与智能指针
 
-### 1. C++值类别系统
+## 1. 概述
 
-#### 什么是值类别？
+在现代C++编程中，移动语义和智能指针是两个至关重要的特性。移动语义通过避免不必要的拷贝操作显著提升程序性能，而智能指针则通过自动化内存管理帮助我们编写更安全、更可靠的代码。本章将深入探讨这些高级特性的原理、实现和最佳实践。
+
+## 2. 值类别与移动语义基础
+
+### 2.1 C++值类别系统
+
+#### 2.1.1 什么是值类别？
 
 C++中的每个表达式都有两个重要属性：类型和值类别。值类别决定了表达式的行为特征：
 
-**左值（lvalue）**
+#### 2.1.2 左值（lvalue）
 - 有明确内存地址的对象
 - 可以出现在赋值操作符左边
 - 生命周期较长，通常有名字
@@ -16,7 +22,7 @@ int x = 10;        // x是左值
 int& ref = x;      // ref是左值引用
 ```
 
-**右值（rvalue）**
+#### 2.1.3 右值（rvalue）
 - 临时对象或字面量
 - 通常没有名字，生命周期短暂
 - 可以被移动而不是复制
@@ -42,9 +48,9 @@ std::string moved = std::move(str); // std::move(str)是xvalue
 - 优化临时对象的处理
 - 避免不必要的复制操作
 
-### 2. 移动语义
+## 3. 移动语义实现
 
-#### 移动语义的核心思想
+### 3.1 移动语义的核心思想
 
 移动语义解决了一个重要问题：如何高效地转移资源所有权，而不是昂贵的复制操作。
 
@@ -57,8 +63,11 @@ std::vector<int> createLargeVector() {
 ```
 
 **移动语义的解决方案**
+
+### 3.2 移动构造函数
+
 ```cpp
-// 移动构造函数
+// 移动构造函数示例
 class MyString {
 private:
     char* data;
@@ -72,7 +81,14 @@ public:
         other.size = 0;
     }
     
-    // 移动赋值操作符
+    
+    };
+```
+
+### 3.3 移动赋值操作符
+
+```cpp
+// 移动赋值操作符
     MyString& operator=(MyString&& other) noexcept {
         if (this != &other) {
             delete[] data;     // 释放当前资源
@@ -92,9 +108,9 @@ public:
 2. **资源效率**：减少内存分配和释放
 3. **表达力**：明确表示资源转移的意图
 
-### 3. 完美转发
+## 4. 完美转发
 
-#### 什么是完美转发？
+### 4.1 什么是完美转发？
 
 完美转发允许函数模板将参数"完美地"转发给其他函数，保持参数的所有特性（类型、值类别等）。
 
@@ -121,7 +137,7 @@ func(x);        // T推导为int&，param类型为int&
 func(42);       // T推导为int，param类型为int&&
 ```
 
-#### 引用折叠规则
+### 4.2 引用折叠规则
 
 编译器使用引用折叠规则处理复杂的引用类型：
 - `T& &` → `T&`
@@ -129,9 +145,9 @@ func(42);       // T推导为int，param类型为int&&
 - `T&& &` → `T&`
 - `T&& &&` → `T&&`
 
-### 4. 智能指针
+## 5. 智能指针
 
-#### 为什么需要智能指针？
+### 5.1 为什么需要智能指针？
 
 传统指针的问题：
 - 内存泄漏：忘记delete
@@ -139,7 +155,7 @@ func(42);       // T推导为int，param类型为int&&
 - 重复释放：多次delete同一指针
 - 异常安全：异常导致资源泄漏
 
-#### unique_ptr：独占所有权
+### 5.2 unique_ptr：独占所有权
 
 ```cpp
 #include <memory>
@@ -160,7 +176,7 @@ std::unique_ptr<int> ptr2 = std::move(ptr);
 - 零开销：与原始指针性能相同
 - 异常安全
 
-#### shared_ptr：共享所有权
+### 5.3 shared_ptr - 共享所有权
 
 ```cpp
 // 创建shared_ptr
@@ -179,7 +195,7 @@ std::cout << ptr1.use_count(); // 输出：2
 - 线程安全的引用计数
 - 支持自定义删除器
 
-#### weak_ptr：弱引用
+### 5.4 weak_ptr - 弱引用
 
 ```cpp
 std::shared_ptr<int> shared = std::make_shared<int>(42);
@@ -197,9 +213,9 @@ if (auto locked = weak.lock()) {
 - 观察对象而不影响生命周期
 - 缓存场景中的弱引用
 
-### 5. RAII原则
+## 6. RAII原则
 
-#### RAII的核心思想
+### 6.1 RAII的核心思想
 
 RAII（Resource Acquisition Is Initialization）将资源管理与对象生命周期绑定：
 
@@ -242,9 +258,9 @@ public:
 2. **强保证**：异常发生时，程序状态不变（事务性）
 3. **不抛异常保证**：函数保证不抛出异常
 
-### 6. 现代C++内存管理
+## 7. 设计原则与最佳实践
 
-#### 最佳实践
+### 7.1 现代C++内存管理最佳实践
 
 1. **优先使用智能指针**
 ```cpp
@@ -281,7 +297,7 @@ class Child {
 2. **就地构造**：使用emplace系列函数
 3. **避免不必要的shared_ptr**：独占所有权时使用unique_ptr
 
-## 设计原则
+## 7. 设计原则
 
 ### 1. 所有权清晰性
 - 明确每个资源的所有者
@@ -298,16 +314,16 @@ class Child {
 - 避免不必要的复制操作
 - 合理选择智能指针类型
 
-## 常见陷阱
+### 7.2 常见陷阱
 
-### 1. 移动后使用
+#### 7.2.1 移动后使用
 ```cpp
 std::string str = "hello";
 std::string moved = std::move(str);
 std::cout << str; // 危险：str处于未定义状态
 ```
 
-### 2. 循环引用
+#### 7.2.2 循环引用
 ```cpp
 // 错误：循环引用导致内存泄漏
 struct Node {
@@ -329,7 +345,7 @@ void process(const Data& data) {
 }
 ```
 
-## 学习建议
+### 7.3 学习建议
 
 1. **从概念开始**：理解移动语义和RAII的设计思想
 2. **实践为主**：通过编写代码加深理解
@@ -337,7 +353,7 @@ void process(const Data& data) {
 4. **阅读标准库**：学习标准库中智能指针的实现
 5. **渐进学习**：从简单场景开始，逐步处理复杂情况
 
-## 实用价值
+## 8. 总结
 
 掌握这些现代C++特性将帮助你：
 - 编写更安全、更高效的代码
@@ -347,3 +363,11 @@ void process(const Data& data) {
 - 更好地理解现代C++库的设计
 
 现代C++的移动语义和智能指针不仅是技术特性，更是编程思维的转变。它们体现了C++语言在保持高性能的同时，努力提升安全性和表达力的设计哲学。通过掌握这些特性，你将能够编写出既高效又安全的现代C++代码。
+
+## 9. 进一步学习
+
+- 深入研究C++11/14/17/20的新特性
+- 学习更多RAII应用场景
+- 探索自定义智能指针的实现
+- 研究现代C++库的设计模式
+- 实践大型项目中的内存管理策略
