--- a/data/homepage/cpp/cpp_013.md
+++ b/data/homepage/cpp/cpp_013.md
@@ -1,8 +1,14 @@
 # C++ Lambda表达式与函数式编程详解
 
-### 1. Lambda表达式基础
+## 1. 概述
 
-#### 什么是Lambda表达式？
+Lambda表达式是C++11引入的重要特性，它允许在需要函数的地方直接定义匿名函数，极大地简化了代码编写。结合函数式编程概念，Lambda表达式为现代C++提供了强大的表达能力和编程范式。
+
+本文将深入探讨Lambda表达式的语法、捕获机制、类型系统，以及在函数式编程中的应用，帮助你掌握这一现代C++的核心特性。
+
+## 2. Lambda表达式基础
+
+### 2.1 什么是Lambda表达式？
 
 Lambda表达式是C++11引入的一种创建匿名函数的方式，它允许你在需要函数的地方直接定义函数逻辑。
 
@@ -36,7 +42,7 @@ int main() {
 }
 ```
 
-#### Lambda表达式的语法结构
+### 2.2 Lambda表达式的语法结构
 
 Lambda表达式的完整语法：
 
@@ -71,9 +77,9 @@ std::cout << add(3, 4) << std::endl;      // 7
 std::cout << divide(10, 3) << std::endl;  // 3.33333
 ```
 
-### 2. 捕获机制详解
+## 3. 捕获机制详解
 
-#### 捕获列表的语法
+### 3.1 捕获列表的语法
 
 Lambda表达式可以捕获外部作用域的变量，有多种捕获方式：
 
@@ -127,7 +133,7 @@ void demonstrateCapture() {
 }
 ```
 
-#### 捕获的工作原理
+### 3.2 捕获的工作原理
 
 Lambda表达式实际上是编译器生成的函数对象（仿函数）：
 
@@ -153,7 +159,7 @@ public:
 __lambda_unique_name lambda(x);
 ```
 
-#### mutable关键字
+### 3.3 mutable关键字
 
 使用`mutable`关键字可以修改按值捕获的变量：
 
@@ -180,7 +186,7 @@ void mutableExample() {
 }
 ```
 
-#### 初始化捕获（C++14）
+### 3.4 初始化捕获（C++14）
 
 C++14引入了初始化捕获，允许在捕获时进行初始化：
 
@@ -217,9 +223,9 @@ void initCaptureExample() {
 }
 ```
 
-### 3. Lambda表达式的类型和存储
+## 4. Lambda表达式的类型和存储
 
-#### auto关键字和类型推导
+### 4.1 auto关键字和类型推导
 
 每个Lambda表达式都有唯一的类型：
 
@@ -248,7 +254,7 @@ void lambdaTypes() {
 }
 ```
 
-#### 无捕获Lambda的特殊性质
+### 4.2 无捕获Lambda的特殊性质
 
 无捕获的Lambda可以转换为函数指针：
 
@@ -284,9 +290,9 @@ void lambdaConversion() {
 }
 ```
 
-### 4. 函数式编程概念
+## 5. 函数式编程概念
 
-#### 高阶函数
+### 5.1 高阶函数
 
 高阶函数是接受函数作为参数或返回函数的函数：
 
@@ -361,7 +367,7 @@ void higherOrderFunctions() {
 }
 ```
 
-#### 函数组合
+### 5.2 函数组合
 
 函数组合是函数式编程的核心概念：
 
@@ -408,7 +414,7 @@ void functionComposition() {
 }
 ```
 
-#### 柯里化（Currying）
+### 5.3 柯里化（Currying）
 
 柯里化是将多参数函数转换为一系列单参数函数的技术：
 
@@ -462,9 +468,9 @@ void curryingExample() {
 }
 ```
 
-### 5. STL算法与Lambda
+## 6. STL算法与Lambda
 
-#### 常用STL算法的Lambda应用
+### 6.1 常用STL算法的Lambda应用
 
 ```cpp
 #include <vector>
@@ -534,7 +540,7 @@ void stlWithLambda() {
 }
 ```
 
-#### 复杂的Lambda应用场景
+### 6.2 复杂的Lambda应用场景
 
 ```cpp
 #include <vector>
@@ -614,9 +620,9 @@ void complexLambdaExamples() {
 }
 ```
 
-### 6. 性能考虑
+## 7. 性能考虑
 
-#### Lambda vs 函数指针 vs 函数对象
+### 7.1 Lambda vs 函数指针 vs 函数对象
 
 ```cpp
 #include <chrono>
@@ -671,7 +677,7 @@ void performanceComparison() {
 }
 ```
 
-#### 捕获的性能影响
+### 7.2 捕获的性能影响
 
 ```cpp
 #include <vector>
@@ -727,9 +733,9 @@ void capturePerformance() {
 }
 ```
 
-### 7. 实际应用场景
+## 8. 实际应用场景
 
-#### 事件处理系统
+### 8.1 事件处理系统
 
 ```cpp
 #include <functional>
@@ -784,7 +790,7 @@ void eventSystemExample() {
 }
 ```
 
-#### 配置和策略模式
+### 8.2 配置和策略模式
 
 ```cpp
 #include <functional>
@@ -858,7 +864,7 @@ void calculatorExample() {
 }
 ```
 
-#### 异步编程和回调
+### 8.3 异步编程和回调
 
 ```cpp
 #include <functional>
@@ -948,27 +954,29 @@ void asyncExample() {
 }
 ```
 
-## 设计原则
+## 9. 设计原则与最佳实践
 
-### 1. 简洁性原则
+### 9.1 设计原则
+
+#### 9.1.1 简洁性原则
 - 优先使用Lambda而不是函数对象（当逻辑简单时）
 - 避免过于复杂的Lambda表达式
 - 将复杂逻辑提取为独立函数
 
-### 2. 性能考虑
+#### 9.1.2 性能考虑
 - 小对象优先按值捕获
 - 大对象优先按引用捕获
 - 避免不必要的捕获
 - 考虑内联优化
 
-### 3. 可读性原则
+#### 9.1.3 可读性原则
 - 使用有意义的参数名
 - 适当添加类型注解
 - 避免过深的嵌套
 
-## 常见陷阱
+### 9.2 常见陷阱
 
-### 1. 悬空引用
+#### 9.2.1 悬空引用
 ```cpp
 // 错误：返回的Lambda包含悬空引用
 std::function<int()> createBadLambda() {
@@ -983,7 +991,7 @@ std::function<int()> createGoodLambda() {
 }
 ```
 
-### 2. 意外的拷贝
+#### 9.2.2 意外的拷贝
 ```cpp
 // 可能导致意外拷贝
 std::vector<std::string> words = {"hello", "world"};
@@ -997,7 +1005,7 @@ auto betterLambda = [&words](const std::string& word) {
 };
 ```
 
-### 3. 递归Lambda的问题
+#### 9.2.3 递归Lambda的问题
 ```cpp
 // 错误：无法直接递归
 auto factorial = [](int n) {
@@ -1018,9 +1026,9 @@ auto factorial2 = [](auto& self, int n) -> int {
 };
 ```
 
-## 最佳实践
+### 9.3 最佳实践
 
-### 1. 选择合适的捕获方式
+#### 9.3.1 选择合适的捕获方式
 ```cpp
 // 指导原则
 void bestPractices() {
@@ -1045,7 +1053,7 @@ void bestPractices() {
 }
 ```
 
-### 2. 使用泛型Lambda（C++14）
+#### 9.3.2 使用泛型Lambda（C++14）
 ```cpp
 // 泛型Lambda更灵活
 auto genericLambda = [](auto a, auto b) {
@@ -1058,7 +1066,7 @@ std::cout << genericLambda(1.5, 2.5) << std::endl;      // double
 std::cout << genericLambda(std::string("Hello"), std::string(" World")) << std::endl; // string
 ```
 
-### 3. 合理使用std::function
+#### 9.3.3 合理使用std::function
 ```cpp
 // 只在需要类型擦除时使用std::function
 class EventHandler {
@@ -1079,7 +1087,7 @@ public:
 };
 ```
 
-## 学习建议
+## 10. 学习建议
 
 1. **从简单开始**：先掌握基本的Lambda语法和捕获机制
 2. **理解原理**：了解Lambda表达式的编译器实现
@@ -1087,7 +1095,7 @@ public:
 4. **性能意识**：了解不同捕获方式的性能影响
 5. **函数式思维**：逐步培养函数式编程的思维方式
 
-## 实用价值
+## 11. 总结
 
 掌握Lambda表达式和函数式编程将帮助你：
 - 编写更简洁、表达力强的代码
@@ -1097,3 +1105,11 @@ public:
 - 掌握现代C++的编程范式
 
 Lambda表达式是现代C++最重要的特性之一，它不仅简化了代码编写，还为函数式编程提供了强大的支持。通过合理使用Lambda表达式，你可以编写出更优雅、更高效的C++代码。
+
+## 12. 进一步学习
+
+- **C++14/17/20的Lambda增强**：学习新标准中Lambda的改进和新特性
+- **函数式编程库**：探索如ranges库等现代C++函数式编程工具
+- **模板元编程与Lambda**：了解Lambda在模板编程中的应用
+- **并发编程中的Lambda**：学习在多线程环境中使用Lambda的最佳实践
+- **性能优化技巧**：深入理解Lambda的编译器优化和性能调优方法
