--- a/data/homepage/cpp/cpp_015.md
+++ b/data/homepage/cpp/cpp_015.md
@@ -1,8 +1,14 @@
 # C++设计模式与架构设计
 
-### 1. 设计模式基础
+## 1. 概述
 
-#### 什么是设计模式？
+设计模式是软件工程中解决常见设计问题的可复用解决方案。它们代表了最佳实践，是众多软件开发人员经过相当长的一段时间的试验和错误总结出来的。在C++中，设计模式不仅能帮助我们编写更加灵活和可维护的代码，还能提高代码的复用性和扩展性。
+
+本章将深入探讨经典的设计模式、SOLID原则、软件架构模式以及性能优化策略，帮助你掌握现代C++软件设计的核心技能。
+
+## 2. 设计模式基础
+
+### 2.1 什么是设计模式？
 
 **设计模式**是解决特定设计问题的可复用解决方案，包含四个基本要素：
 - **模式名称**：便于交流的标识
@@ -10,15 +16,15 @@
 - **解决方案**：设计的组成元素
 - **效果**：应用模式的结果和权衡
 
-#### 模式的分类
+### 2.2 模式的分类
 
 1. **创建型模式**：对象创建机制
 2. **结构型模式**：对象组合方式
 3. **行为型模式**：对象间的职责分配
 
-### 2. 创建型模式
+## 3. 创建型模式
 
-#### 单例模式（Singleton）
+### 3.1 单例模式（Singleton）
 
 **用途**：确保一个类只有一个实例，并提供全局访问点。
 
@@ -67,7 +73,7 @@ private:
 - 数据库连接池
 - 缓存管理器
 
-#### 工厂模式（Factory）
+### 3.2 工厂模式（Factory）
 
 **用途**：创建对象而不暴露创建逻辑，通过公共接口引用新创建的对象。
 
@@ -116,7 +122,7 @@ auto circle = ShapeFactory::createShape(ShapeFactory::ShapeType::CIRCLE);
 circle->draw();
 ```
 
-#### 建造者模式（Builder）
+### 3.3 建造者模式（Builder）
 
 **用途**：构建复杂对象，将构建过程和表示分离。
 
@@ -183,9 +189,9 @@ auto computer = ComputerBuilder()
     .build();
 ```
 
-### 3. 结构型模式
+## 4. 结构型模式
 
-#### 适配器模式（Adapter）
+### 4.1 适配器模式（Adapter）
 
 **用途**：让不兼容的接口能够协同工作。
 
@@ -225,7 +231,7 @@ auto adapter = std::make_unique<Adapter>(std::move(adaptee));
 adapter->request();
 ```
 
-#### 装饰器模式（Decorator）
+### 4.2 装饰器模式（Decorator）
 
 **用途**：动态地给对象添加新功能，而不改变其结构。
 
@@ -297,9 +303,9 @@ coffee = std::make_unique<SugarDecorator>(std::move(coffee));
 std::cout << coffee->getDescription() << " - $" << coffee->getCost() << std::endl;
 ```
 
-### 4. 行为型模式
+## 5. 行为型模式
 
-#### 观察者模式（Observer）
+### 5.1 观察者模式（Observer）
 
 **用途**：定义对象间的一对多依赖关系，当一个对象状态改变时，所有依赖者都得到通知。
 
@@ -377,7 +383,7 @@ agency.attach(&bbc);
 agency.setNews("重大新闻发布！");
 ```
 
-#### 策略模式（Strategy）
+### 5.2 策略模式（Strategy）
 
 **用途**：定义算法族，分别封装起来，让它们之间可以互相替换。
 
@@ -438,7 +444,7 @@ context.setStrategy(std::make_unique<BubbleSort>());
 context.executeSort(data);
 ```
 
-#### 命令模式（Command）
+### 5.3 命令模式（Command）
 
 **用途**：将请求封装成对象，以便使用不同的请求、队列或日志请求参数化其他对象。
 
@@ -529,9 +535,9 @@ public:
 };
 ```
 
-### 5. SOLID原则
+## 6. SOLID原则
 
-#### 单一职责原则（SRP）
+### 6.1 单一职责原则（SRP）
 
 **原则**：一个类应该只有一个引起它变化的原因。
 
@@ -578,7 +584,7 @@ public:
 };
 ```
 
-#### 开闭原则（OCP）
+### 6.2 开闭原则（OCP）
 
 **原则**：软件实体应该对扩展开放，对修改关闭。
 
@@ -618,7 +624,7 @@ public:
 };
 ```
 
-#### 里氏替换原则（LSP）
+### 6.3 里氏替换原则（LSP）
 
 **原则**：子类对象应该能够替换其基类对象而不改变程序的正确性。
 
@@ -646,7 +652,7 @@ public:
 };
 ```
 
-#### 接口隔离原则（ISP）
+### 6.4 接口隔离原则（ISP）
 
 **原则**：客户端不应该依赖它不需要的接口。
 
@@ -692,7 +698,7 @@ public:
 };
 ```
 
-#### 依赖倒置原则（DIP）
+### 6.5 依赖倒置原则（DIP）
 
 **原则**：高层模块不应该依赖低层模块，两者都应该依赖抽象。
 
@@ -740,9 +746,9 @@ auto emailService = std::make_unique<NotificationService>(
 emailService->notify("Hello World!");
 ```
 
-### 6. 软件架构模式
+## 7. 软件架构模式
 
-#### 分层架构
+### 7.1 分层架构
 
 **概念**：将系统分为多个层次，每层只能调用下层的服务。
 
@@ -802,7 +808,7 @@ public:
 };
 ```
 
-#### MVC模式
+### 7.2 MVC模式
 
 **概念**：将应用程序分为模型、视图和控制器三个组件。
 
@@ -854,9 +860,9 @@ public:
 };
 ```
 
-### 7. 依赖注入
+## 8. 依赖注入
 
-#### 构造函数注入
+### 8.1 构造函数注入
 
 ```cpp
 class Logger {
@@ -893,7 +899,7 @@ auto userService = std::make_unique<UserService>(std::move(logger));
 userService->createUser("张三");
 ```
 
-#### 简单的IoC容器
+### 8.2 简单的IoC容器
 
 ```cpp
 #include <unordered_map>
@@ -928,11 +934,11 @@ container.registerType<Logger, FileLogger>();
 auto logger = container.resolve<Logger>();
 ```
 
-## 性能优化策略
+## 9. 性能优化策略
 
-### 1. 编译时优化
+### 9.1 编译时优化
 
-#### 模板元编程
+#### 9.1.1 模板元编程
 
 ```cpp
 // 编译时计算
@@ -950,7 +956,7 @@ struct Factorial<0> {
 constexpr int result = Factorial<5>::value;  // 编译时计算
 ```
 
-#### constexpr函数
+#### 9.1.2 constexpr函数
 
 ```cpp
 constexpr int fibonacci(int n) {
@@ -962,9 +968,9 @@ constexpr int fibonacci(int n) {
 constexpr int fib10 = fibonacci(10);
 ```
 
-### 2. 内存优化
+### 9.2 内存优化
 
-#### 对象池模式
+#### 9.2.1 对象池模式
 
 ```cpp
 template<typename T>
@@ -1001,7 +1007,7 @@ public:
 };
 ```
 
-#### RAII资源管理
+#### 9.2.2 RAII资源管理
 
 ```cpp
 class FileHandle {
@@ -1044,9 +1050,9 @@ public:
 };
 ```
 
-## 代码重构技巧
+## 10. 代码重构技巧
 
-### 1. 提取方法
+### 10.1 提取方法
 
 ```cpp
 // 重构前：长方法
@@ -1120,7 +1126,7 @@ private:
 };
 ```
 
-### 2. 提取类
+### 10.2 提取类
 
 ```cpp
 // 重构前：职责过多的类
@@ -1187,32 +1193,32 @@ public:
 };
 ```
 
-## 最佳实践
+## 11. 最佳实践
 
-### 1. 设计原则
+### 11.1 设计原则
 
 - **优先组合而非继承**：使用组合提高灵活性
 - **针对接口编程**：依赖抽象而非具体实现
 - **保持简单**：避免过度设计
 - **单一职责**：每个类只做一件事
 
-### 2. 代码质量
+### 11.2 代码质量
 
 - **命名清晰**：使用有意义的名称
 - **函数简短**：保持函数简洁明了
 - **减少重复**：遵循DRY原则
 - **异常安全**：正确处理异常情况
 
-### 3. 性能考虑
+### 11.3 性能考虑
 
 - **避免过早优化**：先保证正确性
 - **测量性能**：使用工具分析瓶颈
 - **合理使用模板**：平衡编译时间和运行时性能
 - **内存管理**：使用智能指针和RAII
 
-## 学习建议
+## 12. 学习建议
 
-### 循序渐进的学习路径
+### 12.1 循序渐进的学习路径
 
 1. **基础模式**：从简单的单例、工厂模式开始
 2. **SOLID原则**：理解面向对象设计原则
@@ -1220,7 +1226,7 @@ public:
 4. **行为型模式**：掌握对象交互模式
 5. **架构模式**：理解系统级设计模式
 
-### 实践项目建议
+### 12.2 实践项目建议
 
 1. **日志系统**：实现单例、策略、装饰器模式
 2. **图形编辑器**：应用命令、观察者、组合模式
@@ -1228,18 +1234,42 @@ public:
 4. **游戏引擎**：应用状态、工厂、对象池模式
 5. **数据库ORM**：实现建造者、适配器模式
 
-### 学习资源
+### 12.3 学习资源
 
 1. **经典书籍**：《设计模式》、《重构》、《代码整洁之道》
 2. **在线资源**：GitHub开源项目、技术博客
 3. **实践练习**：LeetCode设计题、开源项目贡献
 4. **代码审查**：参与团队代码审查，学习最佳实践
 
-## 总结
+## 13. 总结
 
-设计模式和架构设计是软件开发的重要技能。通过学习和应用这些模式，你可以：
+设计模式和架构设计是软件开发的重要技能。通过本章的学习，我们掌握了：
 
+- **经典设计模式**：创建型、结构型、行为型模式的核心思想和实现
+- **SOLID原则**：面向对象设计的五大基本原则
+- **架构模式**：分层架构、MVC等系统级设计模式
+- **依赖注入**：控制反转和依赖注入的实现技巧
+- **性能优化**：编译时优化和内存管理策略
+- **代码重构**：提取方法、提取类等重构技巧
+- **最佳实践**：设计原则、代码质量和性能考虑
+
+通过学习和应用这些模式，你可以：
 - 编写更加灵活和可维护的代码
 - 提高代码的复用性和扩展性
 - 更好地与团队成员沟通设计思路
 - 解决复杂的软件设计问题
+
+## 14. 进一步学习
+
+### 高级主题
+- **领域驱动设计(DDD)**：复杂业务系统的建模方法
+- **微服务架构**：分布式系统的设计模式
+- **函数式编程模式**：在C++中应用函数式设计思想
+- **并发设计模式**：多线程环境下的设计模式
+- **模板设计模式**：利用C++模板系统的设计技巧
+
+### 实践建议
+- **开源项目贡献**：参与知名开源项目，学习实际应用
+- **代码审查**：积极参与团队代码审查，分享设计经验
+- **技术分享**：通过博客、演讲等方式分享设计模式应用心得
+- **持续重构**：在现有项目中应用设计模式进行重构优化
