--- a/data/homepage/cpp/cpp_012.md
+++ b/data/homepage/cpp/cpp_012.md
@@ -1,8 +1,12 @@
 # C++智能指针：shared_ptr与weak_ptr详解
 
-### 1. shared_ptr：共享所有权
+## 1. 概述
 
-#### 什么是shared_ptr？
+在现代C++编程中，智能指针是内存管理的重要工具。shared_ptr和weak_ptr作为C++11引入的智能指针，提供了安全、高效的共享所有权管理机制。本章将深入探讨这两种智能指针的原理、使用方法和最佳实践。
+
+## 2. shared_ptr：共享所有权
+
+### 2.1 什么是shared_ptr？
 
 shared_ptr是一个智能指针，允许多个指针实例共享同一个对象的所有权。当最后一个shared_ptr被销毁时，所管理的对象也会被自动删除。
 
@@ -25,7 +29,7 @@ int main() {
 } // 所有shared_ptr离开作用域，对象被自动删除
 ```
 
-#### 引用计数机制
+### 2.2 引用计数机制
 
 shared_ptr使用引用计数来跟踪有多少个指针指向同一个对象：
 
@@ -52,7 +56,7 @@ void demonstrateRefCount() {
 }
 ```
 
-#### 创建shared_ptr的方法
+### 2.3 创建shared_ptr的方法
 
 **1. 使用make_shared（推荐）**
 ```cpp
@@ -73,7 +77,7 @@ std::shared_ptr<MyClass> ptr(new MyClass(args));
 - 两次内存分配
 - 异常不安全（在某些情况下）
 
-#### 控制块概念
+### 2.4 控制块概念
 
 shared_ptr内部使用控制块来管理引用计数和其他信息：
 
@@ -93,9 +97,9 @@ shared_ptr结构:
                    └─────────────┘
 ```
 
-### 2. weak_ptr：弱引用
+## 3. weak_ptr：弱引用
 
-#### 什么是weak_ptr？
+### 3.1 什么是weak_ptr？
 
 weak_ptr是一个不拥有对象的智能指针，它可以观察shared_ptr管理的对象，但不影响对象的生命周期。
 
@@ -124,7 +128,7 @@ int main() {
 }
 ```
 
-#### weak_ptr的主要用途
+### 3.2 weak_ptr的主要用途
 
 **1. 打破循环引用**
 ```cpp
@@ -177,9 +181,9 @@ public:
 };
 ```
 
-### 3. 循环引用问题
+## 4. 循环引用问题
 
-#### 什么是循环引用？
+### 4.1 什么是循环引用？
 
 循环引用发生在两个或多个对象通过shared_ptr相互引用，形成引用环：
 
@@ -209,7 +213,7 @@ void createCycle() {
 }
 ```
 
-#### 解决循环引用
+### 4.2 解决循环引用
 
 使用weak_ptr打破循环：
 
@@ -245,9 +249,9 @@ void createList() {
 }
 ```
 
-### 4. 线程安全特性
+## 5. 线程安全特性
 
-#### shared_ptr的线程安全保证
+### 5.1 shared_ptr的线程安全保证
 
 shared_ptr提供有限的线程安全保证：
 
@@ -298,7 +302,7 @@ void threadUnsafeExample() {
 }
 ```
 
-#### 线程安全的使用模式
+### 5.2 线程安全的使用模式
 
 ```cpp
 class ThreadSafeCounter {
@@ -320,9 +324,9 @@ public:
 };
 ```
 
-### 5. 性能考虑
+## 6. 性能考虑
 
-#### 内存开销
+### 6.1 内存开销
 
 ```cpp
 // 内存布局比较
@@ -337,7 +341,7 @@ sizeof(std::shared_ptr<int>);    // 16字节（对象指针+控制块指针）
 // - 删除器和分配器：可变大小
 ```
 
-#### 性能优化建议
+### 6.2 性能优化建议
 
 **1. 优先使用make_shared**
 ```cpp
@@ -376,7 +380,7 @@ public:
 };
 ```
 
-### 6. 自定义删除器
+## 7. 自定义删除器
 
 shared_ptr支持自定义删除器，用于特殊的资源管理需求：
 
@@ -412,26 +416,28 @@ void arrayExample() {
 }
 ```
 
-## 设计原则
+## 8. 设计原则与最佳实践
 
-### 1. 明确所有权语义
+### 8.1 设计原则
+
+#### 8.1.1 明确所有权语义
 - 使用shared_ptr表达共享所有权
 - 使用weak_ptr表达观察关系
 - 避免混合使用原始指针和智能指针
 
-### 2. 防止循环引用
+#### 8.1.2 防止循环引用
 - 识别潜在的循环引用场景
 - 在适当位置使用weak_ptr
 - 设计清晰的所有权层次结构
 
-### 3. 线程安全考虑
+#### 8.1.3 线程安全考虑
 - 理解shared_ptr的线程安全保证
 - 保护对shared_ptr本身的并发修改
 - 保护对指向对象的并发访问
 
-## 常见陷阱
+### 8.2 常见陷阱
 
-### 1. 从原始指针创建多个shared_ptr
+#### 8.2.1 从原始指针创建多个shared_ptr
 ```cpp
 // 错误：导致重复删除
 int* raw = new int(42);
@@ -439,7 +445,7 @@ std::shared_ptr<int> ptr1(raw);
 std::shared_ptr<int> ptr2(raw); // 危险！两个独立的控制块
 ```
 
-### 2. 循环引用导致内存泄漏
+#### 8.2.2 循环引用导致内存泄漏
 ```cpp
 // 错误：相互持有shared_ptr
 class A {
@@ -451,7 +457,7 @@ class B {
 };
 ```
 
-### 3. 在构造函数中使用shared_from_this
+#### 8.2.3 在构造函数中使用shared_from_this
 ```cpp
 class MyClass : public std::enable_shared_from_this<MyClass> {
 public:
@@ -467,9 +473,9 @@ public:
 };
 ```
 
-## 最佳实践
+### 8.3 最佳实践
 
-### 1. 工厂函数模式
+#### 8.3.1 工厂函数模式
 ```cpp
 class MyClass {
 private:
@@ -485,7 +491,7 @@ private:
 };
 ```
 
-### 2. 资源管理包装器
+#### 8.3.2 资源管理包装器
 ```cpp
 template<typename Resource, typename Deleter>
 class ResourceWrapper {
@@ -502,7 +508,7 @@ public:
 };
 ```
 
-### 3. 观察者模式实现
+#### 8.3.3 观察者模式实现
 ```cpp
 class Subject {
 private:
@@ -533,7 +539,7 @@ public:
 };
 ```
 
-## 学习建议
+## 9. 学习建议
 
 1. **理解概念**：先掌握引用计数和共享所有权的基本概念
 2. **识别场景**：学会识别需要共享所有权的使用场景
@@ -541,7 +547,7 @@ public:
 4. **性能意识**：了解智能指针的性能特征和优化方法
 5. **实践应用**：在实际项目中逐步应用这些概念
 
-## 实用价值
+## 10. 总结
 
 掌握shared_ptr和weak_ptr将帮助你：
 - 安全地管理共享资源
@@ -551,3 +557,11 @@ public:
 - 设计更清晰的API接口
 
 shared_ptr和weak_ptr是现代C++内存管理的重要工具，它们提供了安全、高效的共享所有权管理机制。通过合理使用这些智能指针，你可以编写出更安全、更可维护的C++代码。
+
+## 11. 进一步学习
+
+- 深入研究智能指针的内部实现机制
+- 学习更多RAII设计模式的应用
+- 探索现代C++库中智能指针的使用案例
+- 实践复杂项目中的内存管理策略
+- 研究性能敏感场景下的智能指针优化技巧
