--- a/data/homepage/cpp/cpp_014.md
+++ b/data/homepage/cpp/cpp_014.md
@@ -1,8 +1,14 @@
 # C++多线程与并发编程
 
-### 1. 多线程基础
+## 1. 概述
 
-#### 什么是线程？
+多线程编程是现代C++开发中的重要技能，它允许程序同时执行多个任务，充分利用多核处理器的性能优势。C++11引入了标准的线程库，为并发编程提供了强大的支持。
+
+本文将深入探讨C++多线程编程的核心概念、同步机制、内存模型，以及常见的并发模式和最佳实践，帮助你掌握安全、高效的并发编程技术。
+
+## 2. 多线程基础
+
+### 2.1 什么是线程？
 
 **线程**是程序执行的最小单位，一个进程可以包含多个线程：
 
@@ -27,22 +33,22 @@ int main() {
 }
 ```
 
-#### 线程的生命周期
+### 2.2 线程的生命周期
 
 1. **创建**：线程对象被构造
 2. **运行**：线程开始执行任务
 3. **等待**：主线程等待子线程完成
 4. **销毁**：线程执行完毕，资源被回收
 
-#### 线程管理的关键概念
+### 2.3 线程管理的关键概念
 
 - **join()**：等待线程完成
 - **detach()**：分离线程，让其独立运行
 - **joinable()**：检查线程是否可以join
 
-### 2. 线程同步机制
+## 3. 线程同步机制
 
-#### 互斥锁（Mutex）
+### 3.1 互斥锁（Mutex）
 
 **互斥锁**用于保护共享资源，确保同一时间只有一个线程可以访问：
 
@@ -65,7 +71,7 @@ void increment() {
 - `std::timed_mutex`：支持超时的锁
 - `std::shared_mutex`：读写锁
 
-#### 条件变量（Condition Variable）
+### 3.2 条件变量（Condition Variable）
 
 **条件变量**用于线程间的通信，让线程等待特定条件：
 
@@ -91,7 +97,7 @@ void signal_ready() {
 }
 ```
 
-#### 原子操作（Atomic Operations）
+### 3.3 原子操作（Atomic Operations）
 
 **原子操作**提供无锁的线程安全操作：
 
@@ -112,9 +118,9 @@ void compare_and_swap() {
 }
 ```
 
-### 3. 内存模型与线程安全
+## 4. 内存模型与线程安全
 
-#### 内存序（Memory Ordering）
+### 4.1 内存序（Memory Ordering）
 
 C++提供了不同的内存序来控制操作的可见性：
 
@@ -133,7 +139,7 @@ int value = x.load(std::memory_order_acquire);
 x.store(1, std::memory_order_relaxed);
 ```
 
-#### 数据竞争与线程安全
+### 4.2 数据竞争与线程安全
 
 **数据竞争**发生在多个线程同时访问同一内存位置，且至少有一个是写操作：
 
@@ -158,9 +164,9 @@ void atomic_increment() {
 }
 ```
 
-### 4. 异步编程模式
+## 5. 异步编程模式
 
-#### Future和Promise
+### 5.1 Future和Promise
 
 **Future/Promise**提供了异步计算的抽象：
 
@@ -188,7 +194,7 @@ std::thread([&promise]() {
 int value = future.get();  // 获取结果
 ```
 
-#### 任务并行化
+### 5.2 任务并行化
 
 ```cpp
 #include <algorithm>
@@ -205,9 +211,9 @@ std::for_each(std::execution::par, data.begin(), data.end(),
 std::sort(std::execution::par, data.begin(), data.end());
 ```
 
-### 5. 常见并发模式
+## 6. 高级并发模式
 
-#### 生产者-消费者模式
+### 6.1 生产者-消费者模式
 
 ```cpp
 #include <queue>
@@ -236,7 +242,7 @@ public:
 };
 ```
 
-#### 线程池模式
+### 6.3 线程池模式
 
 ```cpp
 class ThreadPool {
@@ -277,15 +283,104 @@ public:
 };
 ```
 
-## 设计原则
+## 7. 性能优化与调试
 
-### 1. 最小化共享状态
+### 7.1 性能分析
+
+多线程程序的性能分析需要特别关注以下几个方面：
+
+```cpp
+#include <chrono>
+#include <thread>
+
+// 性能测量示例
+class PerformanceTimer {
+public:
+    void start() {
+        start_time = std::chrono::high_resolution_clock::now();
+    }
+    
+    void stop() {
+        end_time = std::chrono::high_resolution_clock::now();
+    }
+    
+    double elapsed_ms() const {
+        auto duration = end_time - start_time;
+        return std::chrono::duration<double, std::milli>(duration).count();
+    }
+    
+private:
+    std::chrono::high_resolution_clock::time_point start_time, end_time;
+};
+```
+
+**关键性能指标**：
+- **吞吐量**：单位时间内完成的任务数
+- **延迟**：单个任务的完成时间
+- **CPU利用率**：处理器核心的使用效率
+- **内存使用**：程序的内存占用情况
+
+### 7.2 调试技巧
+
+#### 使用调试工具
+
+```cpp
+// 线程安全的日志记录
+class ThreadSafeLogger {
+private:
+    std::mutex log_mutex;
+    std::ofstream log_file;
+    
+public:
+    ThreadSafeLogger(const std::string& filename) : log_file(filename) {}
+    
+    template<typename... Args>
+    void log(Args&&... args) {
+        std::lock_guard<std::mutex> lock(log_mutex);
+        auto now = std::chrono::system_clock::now();
+        auto time_t = std::chrono::system_clock::to_time_t(now);
+        
+        log_file << "[" << std::this_thread::get_id() << "] "
+                 << std::put_time(std::localtime(&time_t), "%Y-%m-%d %H:%M:%S")
+                 << ": ";
+        (log_file << ... << args) << std::endl;
+    }
+};
+```
+
+#### 死锁检测
+
+```cpp
+// 简单的死锁检测机制
+class DeadlockDetector {
+private:
+    static std::map<std::thread::id, std::vector<void*>> thread_locks;
+    static std::mutex detector_mutex;
+    
+public:
+    static void acquire_lock(void* lock_ptr) {
+        std::lock_guard<std::mutex> lock(detector_mutex);
+        thread_locks[std::this_thread::get_id()].push_back(lock_ptr);
+        // 检测潜在的死锁...
+    }
+    
+    static void release_lock(void* lock_ptr) {
+        std::lock_guard<std::mutex> lock(detector_mutex);
+        auto& locks = thread_locks[std::this_thread::get_id()];
+        locks.erase(std::remove(locks.begin(), locks.end(), lock_ptr), locks.end());
+    }
+};
+```
+
+## 8. 设计原则
+
+### 8.1 最小化共享状态
 
 - 尽量减少线程间共享的数据
 - 使用消息传递而非共享内存
 - 优先使用不可变数据
 
-### 2. 使用RAII管理资源
+### 8.2 使用RAII管理资源
 
 ```cpp
 // 好的做法：使用RAII
@@ -300,7 +395,7 @@ mtx.lock();
 mtx.unlock();
 ```
 
-### 3. 避免死锁
+### 8.3 避免死锁
 
 ```cpp
 // 死锁风险：不同顺序获取锁
@@ -322,9 +417,74 @@ void safe_function() {
 }
 ```
 
-## 常见陷阱
+## 9. 实际应用案例
 
-### 1. 忘记join或detach线程
+### 9.1 Web服务器并发处理
+
+```cpp
+#include <thread>
+#include <vector>
+#include <functional>
+#include <queue>
+#include <mutex>
+#include <condition_variable>
+#include <future>
+
+class SimpleWebServer {
+private:
+    ThreadPool thread_pool;
+    std::atomic<bool> running{true};
+    
+public:
+    SimpleWebServer(size_t num_threads) : thread_pool(num_threads) {}
+    
+    void handle_request(const std::string& request) {
+        thread_pool.enqueue([this, request]() {
+            // 处理HTTP请求
+            process_http_request(request);
+        });
+    }
+    
+private:
+    void process_http_request(const std::string& request) {
+        // 解析请求、生成响应
+        std::this_thread::sleep_for(std::chrono::milliseconds(100));
+        // 发送响应...
+    }
+};
+```
+
+### 9.2 并行数据处理
+
+```cpp
+#include <algorithm>
+#include <execution>
+#include <numeric>
+
+class DataProcessor {
+public:
+    // 并行处理大量数据
+    std::vector<double> parallel_transform(const std::vector<double>& input) {
+        std::vector<double> result(input.size());
+        
+        std::transform(std::execution::par_unseq, 
+                      input.begin(), input.end(), result.begin(),
+                      [](double x) { return std::sin(x) * std::cos(x); });
+        
+        return result;
+    }
+    
+    // 并行归约操作
+    double parallel_sum(const std::vector<double>& data) {
+        return std::reduce(std::execution::par, 
+                          data.begin(), data.end(), 0.0);
+    }
+};
+```
+
+## 10. 常见陷阱
+
+### 10.1 忘记join或detach线程
 
 ```cpp
 // 错误：线程对象销毁时会调用std::terminate
@@ -340,7 +500,7 @@ void good_example() {
 }
 ```
 
-### 2. 数据竞争
+### 10.2 数据竞争
 
 ```cpp
 // 危险：多个线程修改同一变量
@@ -356,7 +516,7 @@ void safe_increment() {
 }
 ```
 
-### 3. 虚假唤醒
+### 10.4 虚假唤醒
 
 ```cpp
 // 错误：没有检查条件
@@ -366,7 +526,7 @@ cv.wait(lock);  // 可能被虚假唤醒
 cv.wait(lock, []{ return condition_is_true; });
 ```
 
-## 性能考虑
+## 3. 性能考虑
 
 ### 1. 锁的开销
 
@@ -390,7 +550,7 @@ if (num_threads == 0) {
 }
 ```
 
-## 最佳实践
+## 4. 最佳实践
 
 ### 1. 优先使用高级抽象
 
@@ -414,7 +574,7 @@ void exception_safe_function() {
 - 进行压力测试
 - 考虑使用形式化验证工具
 
-## 学习建议
+## 11. 学习建议
 
 ### 循序渐进的学习路径
 
@@ -440,14 +600,31 @@ void exception_safe_function() {
 4. **日志记录**：在关键点添加线程安全的日志
 5. **单元测试**：为并发代码编写专门的测试
 
-## 总结
+## 12. 总结
 
-多线程编程是现代C++开发的重要技能。通过理解基本概念、掌握同步机制、遵循最佳实践，你可以编写出高效、安全的并发程序。记住：
+C++多线程编程是现代软件开发中的重要技能，它能够充分利用多核处理器的性能优势。通过本章的学习，我们掌握了：
 
-- 从简单开始，逐步掌握复杂概念
-- 重视线程安全和数据竞争问题
-- 使用现代C++提供的高级抽象
-- 通过实践项目加深理解
-- 持续学习新的并发编程技术和模式
+- **基础概念**：线程的创建、管理和生命周期
+- **同步机制**：互斥锁、条件变量、原子操作等核心工具
+- **内存模型**：理解内存序和数据竞争的概念
+- **异步编程**：Future/Promise模式和任务并行化
+- **高级模式**：生产者-消费者、线程池等实用模式
+- **性能优化**：分析和调试多线程程序的技巧
+- **最佳实践**：避免常见陷阱，编写安全高效的并发代码
 
-并发编程虽然复杂，但掌握了正确的方法和工具，就能充分发挥多核处理器的性能优势。
+多线程编程需要大量的实践和经验积累。建议从简单的例子开始，逐步掌握各种同步机制，最终能够设计和实现复杂的并发系统。
+
+## 13. 进一步学习
+
+### 高级主题
+- **C++20并发特性**：协程(Coroutines)、原子智能指针等
+- **无锁编程**：Lock-free数据结构和算法
+- **并行算法库**：std::execution策略的深入应用
+- **分布式系统**：跨进程和跨机器的并发处理
+- **实时系统**：硬实时和软实时系统的并发设计
+
+### 推荐资源
+- **书籍**：《C++ Concurrency in Action》、《The Art of Multiprocessor Programming》
+- **标准文档**：C++标准中关于线程和内存模型的规范
+- **开源项目**：研究高质量的多线程C++项目源码
+- **性能分析工具**：Intel VTune、Perf、ThreadSanitizer等
